[gd_scene load_steps=4 format=3 uid="uid://bcgcxbcgw3afb"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_7gdau"]
[ext_resource type="Texture2D" uid="uid://bfud2w45xvw62" path="res://Sprites/Background.png" id="2_trqkg"]

[sub_resource type="LabelSettings" id="LabelSettings_72asd"]
font_size = 64
font_color = Color(0, 0, 1, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7gdau")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_trqkg")

[node name="Start" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.099
anchor_right = 0.333
anchor_bottom = 0.198
offset_left = 0.255981
offset_top = -0.152
offset_right = 0.384003
offset_bottom = -0.304024
text = "Start"

[node name="Load" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.247
anchor_right = 0.333
anchor_bottom = 0.346
offset_left = 0.255981
offset_top = -0.0559998
offset_right = 0.384003
offset_bottom = -0.208023
text = "Load"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.395
anchor_right = 0.333
anchor_bottom = 0.494
offset_left = 0.255981
offset_top = 0.0399933
offset_right = 0.384003
offset_bottom = -0.112
text = "Quit"

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 432.0
offset_top = 96.0
offset_right = 1138.0
offset_bottom = 184.0
text = "Bizness: Under the Sea"
label_settings = SubResource("LabelSettings_72asd")

[node name="LoadGameMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TempBackground" type="ColorRect" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509286, 0.509286, 0.509286, 1)

[node name="LineEdit" type="LineEdit" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465
anchor_top = 0.469
anchor_right = 0.59
anchor_bottom = 0.517
offset_left = 0.319946
offset_top = 0.0879822
offset_right = 0.319946
offset_bottom = -0.0160217
placeholder_text = "Enter load code"

[node name="LoadBack" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.691
anchor_right = 0.167
anchor_bottom = 0.79
offset_left = -0.512001
offset_top = 0.231964
offset_right = -0.384018
offset_bottom = 0.0799866
text = "Back"

[node name="LoadStart" type="Button" parent="LoadGameMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465
anchor_top = 0.531
anchor_right = 0.59
anchor_bottom = 0.58
offset_left = 0.319946
offset_top = -0.0880127
offset_right = 0.319946
offset_bottom = 0.159973
text = "Load"

[connection signal="button_up" from="MainMenu/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="MainMenu/Load" to="." method="_on_load_button_up"]
[connection signal="button_up" from="MainMenu/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="LoadGameMenu/LoadBack" to="." method="_on_load_back_button_up"]
[connection signal="button_up" from="LoadGameMenu/LoadStart" to="." method="_on_load_start_button_up"]
